<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_margin="16dp"
        android:textSize="32sp"
        android:layout_above="@id/userName"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/password"
        android:gravity="center"
        >

        <TextView
            android:layout_width="30pt"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_margin="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userNameInputLogin"
            android:layout_margin="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/buttons"
        android:gravity="center"
        >

        <TextView
            android:layout_width="30pt"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_margin="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordInputLogin"
            android:inputType="textPassword"
            android:layout_margin="16dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        >
        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"/>

    </LinearLayout>



</RelativeLayout>