<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/status_creation"
    android:background="#38B1DE"
    android:clickable="true">



    <TextView
        android:layout_above="@id/status_field"
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:text="@string/statusPrompt"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:gravity="start"
        android:layout_centerHorizontal="true">
    </TextView>

    <EditText
        android:id="@+id/status_field"
        android:layout_width="275dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:hint="@string/your_status"
        android:background="@drawable/status_background"
        android:textSize="25sp"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        />

    <Button
        android:id="@+id/post"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:layout_below="@+id/status_field"
        android:text="@string/post"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"/>

</RelativeLayout>