<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_margin="16dp"
        android:textSize="32sp"
        android:layout_above="@id/userName"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/password"
        android:gravity="center"
        >

        <TextView
            android:layout_width="30pt"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_margin="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userNameInput"
            android:layout_margin="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/firstName"
        android:gravity="center"
        >

        <TextView
            android:layout_width="30pt"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_margin="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordInput"
            android:layout_margin="16dp"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstName"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/lastName"
        android:gravity="center"
        >

        <TextView
            android:layout_width="30pt"
            android:layout_height="wrap_content"
            android:text="@string/firstName"
            android:layout_margin="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstNameInput"
            android:layout_margin="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastName"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/buttons"
        android:gravity="center"
        >

        <TextView
            android:layout_width="30pt"
            android:layout_height="wrap_content"
            android:text="@string/lastName"
            android:layout_margin="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastNameInput"
            android:layout_margin="16dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="128dp"
        android:gravity="center"
        >

        <Button
            android:id="@+id/registerButtonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"/>

    </LinearLayout>



</RelativeLayout>